added table roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port = 8080
 
+spring.datasource.url = jdbc:postgresql://lucky.db.elephantsql.com:5432/duylkyyu
+spring.datasource.driverClassName = org.postgresql.Driver
+spring.jpa.database = postgresql
+spring.datasource.username = duylkyyu
+spring.datasource.password = VpfagqyzEIE_PsI-mipW5qINY-hsfcnk
+spring.jpa.hibernate.ddl-auto = update
